Error/Implementation/Example/Pods/Target Support Files/Pods-TuringErrorImplementation_Example/Pods-TuringErrorImplementation_Example.modulemap
framework module Pods_TuringErrorImplementation_Example {
  umbrella header "Pods-TuringErrorImplementation_Example-umbrella.h"

  export *
  module * { export * }
}
